--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "state0-react-example",
   "version": "0.1.0",
   "private": true,
+  "watch": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,7 +14,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "typescript": "^4.0.3",
+    "state0": "file:/home/ianertson/workspace/state0",
+    "typescript": "4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
