--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-toast-notifications": "^2.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-toast-notifications": "^2.4.0",
     "state0": "file:/home/ianertson/workspace/state0",
     "typescript": "4.0.5",
     "web-vitals": "^0.2.4"
